<resources>
    <string name="app_name">neocafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Войти</string>
    <string name="get_code">Получить код</string>
    <string name="numberNotFound">Номер телефона введён неверно, попробуйте еще раз</string>
    <string name="registration">Регистрация</string>
    <string name="help_text">Введите дату рождения для последующих персональных скидок</string>
    <string name="hint_date">01.01.1991</string>
    <string name="miss">Пропустить</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="our_menu">Наше меню</string>
    <string name="popular">Популярное</string>
    <string name="otp_help_text">Введите 4-х значный код, отправленный на номер</string>
    <string name="resend">Отправить еще раз</string>
    <string name="initial_phone_hint">555 555 555</string>
    <string name="initial_country_code">+996</string>
    <string name="name">Name</string>
    <string name="menu">Меню</string>
    <string name="entrance">Вход</string>
    <string name="example_type">Капучино</string>
    <string name="example_description">Капучи́но — кофейный напиток итальянской кухни на основе эспрессо с добавлением в него подогретого вспененного молока</string>
    <string name="add">Добавить</string>
    <string name="_140_c">140 c</string>
    <string name="additions_text">Приятное дополнение</string>
    <string name="caramel">Карамельный</string>
    <string name="sirops">Сиропы</string>
    <string name="SoyaMilk">Соевое молоко</string>
    <string name="sheepMilk">Овсяное молоко</string>
    <string name="cowMilk">Коровье молоко</string>
    <string name="milk">Молоко</string>
    <string name="category">Category</string>
    <string name="registrationError">Имя пользователя или номер телефона указаны неверно</string>
    <string name="transer_to_maps">Мы переведем вас в 2ГИС</string>
    <string name="transfer_text">Вы сможете быстро сориентироваться и найти быстрый маршрут к нам! Ждем вас!</string>
    <string name="editing">Редактирование</string>
    <string name="notifications">Уведомления</string>
    <string name="bonus">Бонусы</string>
    <string name="about_bonus">Накапливайте бонусы и совершайте выгодные для Вас заказы! 1 бонус = 1 сом</string>
    <string name="ok">Хорошо</string>
    <string name="aboutChanging">Изменения сохранены</string>
    <string name="wantToLeave">Хотите покинуть страницу редактирования?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="bonus_helper_txt">У вас есть 100 бонусов, хотите использовать их?</string>
    <string name="using_bonus">Списание бонусов</string>
    <string name="neocafe">neocafe</string>
    <string name="choose_branch">Выберите филиал</string>
    <string name="something_went_wrong">Упс, что-то пошло не так</string>
    <string name="repeat">Повторить</string>
    <string name="okay">Хорошо</string>
    <string-array name="country">
        <item>KG</item>
        <item>USA</item>
        <item>KZ</item>
        <item>RUS</item>
        <item>CH</item>
        <item>UZB</item>
    </string-array>
</resources>

