<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/client_main_background"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_bonus"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="74dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/helpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/bonus_helper_txt"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:padding="20dp"
                android:text="@string/no"
                android:textColor="@color/button_background"
                android:textSize="16dp"
                app:cornerRadius="10dp"
                app:strokeColor="@color/button_background"
                app:strokeWidth="2dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background"
                android:padding="20dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:cornerRadius="10dp"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>