<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/client_main_background"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/aboutBonusTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/about_bonus"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/button_background"
            android:padding="20dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:cornerRadius="10dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>