<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/client_main_background"
    tools:context=".fragments.main.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="216dp">

            <ImageView
                android:id="@+id/imageImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_image_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/arrowBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#00000000"
                android:src="@drawable/arrow_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_type"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/client_main"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:textAlignment="textStart"
                android:text="@string/example_description"
                android:textSize="16sp"
                android:textColor="@color/client_main"/>

            <LinearLayout
                android:id="@+id/coffeOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/milk"
                        android:textSize="22sp"
                        android:textColor="@color/client_main"
                        android:textStyle="bold"/>

                    <RadioGroup
                        android:id="@+id/radioMilkGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">


                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sirops"
                        android:textStyle="bold"
                        android:textColor="@color/client_main"
                        android:textSize="22sp"/>

                    <LinearLayout
                        android:id="@+id/sirposContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additions_text"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/additionsRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/totalPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_140_c"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="end"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp">
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="32dp">

                    <ImageButton
                        android:id="@+id/lessItemBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu_less_item_details_icon"
                        android:background="#00000000"/>

                    <TextView
                        android:id="@+id/amountTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="21dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:text="0"/>

                    <ImageButton
                        android:id="@+id/addItemBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu_add_item_details_icon"
                        android:background="#00000000"/>
                    
                </LinearLayout>

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background"
                    android:paddingVertical="20dp"
                    android:text="@string/add"
                    android:textSize="16sp"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>