<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/client_main_background"
    tools:context=".fragments.profile.ProfileEditFragment">

    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/arrowBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_weight="1"
            android:text="@string/editing"
            android:textColor="@color/client_main"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/toNotificationsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/notification_icon" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp">

        <EditText
            android:id="@+id/userNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:drawablePadding="12dp"
            android:hint="Имя"
            android:singleLine="true"
            android:backgroundTint="@color/under_line_edit_text"
            android:textColor="@color/client_main"
            android:textSize="16sp"
            android:textColorHint="@color/hint_color"
            android:drawableStart="@drawable/profile_user_icon"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="#00000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/chosen_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-10dp"
                android:text="@string/initial_country_code"
                android:textColor="@color/client_main"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/countryCode"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/phoneNumberEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/initial_phone_hint"
                android:inputType="number"
                android:paddingVertical="20dp"
                android:textColor="@color/client_main"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chosen_country"
                app:layout_constraintTop_toTopOf="parent"
                app:mask="### ### ###" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/under_line_edit_text"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberEditTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/birthdateEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/calendar_icon"
            android:backgroundTint="@color/under_line_edit_text"
            android:padding="20dp"
            android:textSize="16sp"
            android:textColor="@color/client_main"
            android:drawablePadding="12dp"
            android:inputType="datetime"
            android:hint="@string/hint_date"
            android:textColorHint="@color/hint_color"
            app:mask="##.##.####" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="Сохранить"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp" />


    </LinearLayout>

</LinearLayout>